correct body width % so the web body sits within the browser screen without horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  width: 100%;
+  width: 99%;
   line-height: 1.4;
   margin: 5px;
 }
